unpackaged/main/default/objects/Receipt_Reversals__c/Receipt_Reversals__c.object-meta.xml
<CustomObject>
    <label>Receipt Reversal</label>
    <nameField>
        <displayFormat>Receipt Reversal-{00000}</displayFormat>
        <label>Receipt Reversal #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Reversals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>