unpackaged/main/default/objects/Receipt_Reversals__c/fields/Additional_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Receipt Reversals (Additional Approver Name)</relationshipLabel>
    <relationshipName>Receipt_Reversals1</relationshipName>
    <type>Lookup</type>
</CustomField>