unpackaged/main/default/objects/Receipt_Reversals__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unidentified</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>On Account</fullName>
            </value>
            <value>
                <fullName>Unapplied</fullName>
            </value>
            <value>
                <fullName>Prepayments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>