unpackaged/main/default/objects/Receipt_Reversals__c/fields/Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver_Email__c</fullName>
    <formula>Additional_Approver_Name__r.Email_Address__c</formula>
    <label>Approver Email</label>
    <type>Text</type>
</CustomField>