unpackaged/main/default/objects/Receipt_Reversals__c/fields/Del_Additional_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_Additional_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_Additional Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Receipt Reversals (Del_Additional Approver)</relationshipLabel>
    <relationshipName>Receipt_Reversals2</relationshipName>
    <type>Lookup</type>
</CustomField>