unpackaged/main/default/objects/Receipt_Reversals__c/fields/Justification_for_Receipt_Rvsl_Request__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Receipt_Rvsl_Request__c</fullName>
    <label>Justification for Receipt Rvsl Request</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>