unpackaged/main/default/objects/Receipt_Reversals__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>