unpackaged/main/default/objects/Receipt_Reversals__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>BK-ATLANTA B OF A</fullName>
            </value>
            <value>
                <fullName>BK-ATLANTA WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-CHICAGO JP MORGAN</fullName>
            </value>
            <value>
                <fullName>BK-CHICAGO WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-DALLAS B OF A</fullName>
            </value>
            <value>
                <fullName>BK-DALLAS WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-DC BANK OF AMERICA</fullName>
            </value>
            <value>
                <fullName>BK-DC WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-LAS VEGAS WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-LOS ANGELES B OF A</fullName>
            </value>
            <value>
                <fullName>BK-LOS ANGELES WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-MINNEAPOLIS JP MORGAN</fullName>
            </value>
            <value>
                <fullName>BK-MINNEAPOLIS WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-NATL AR WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-NEW ORLEANS CAPITAL ONE</fullName>
            </value>
            <value>
                <fullName>BK-NEW YORK WACHOVIA</fullName>
            </value>
            <value>
                <fullName>BK-NEW YORK WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-ORLANDO B OF A</fullName>
            </value>
            <value>
                <fullName>BK-ORLANDO WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-PHOENIX JP MORGAN</fullName>
            </value>
            <value>
                <fullName>BK-PHOENIX WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-RENO WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-SALT LAKE CITY WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-SAN DIEGO B OF A</fullName>
            </value>
            <value>
                <fullName>BK-SAN DIEGO WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-SAN FRANCISCO B OF A</fullName>
            </value>
            <value>
                <fullName>BK-SAN FRANCISCO WELLS FARGO</fullName>
            </value>
            <value>
                <fullName>BK-SEATTLE B OF A</fullName>
            </value>
            <value>
                <fullName>BK-SEATTLE WELLS FARGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>