unpackaged/main/default/objects/Receipt_Reversals__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CK-Acct Closed (The bank account was closed)</fullName>
            </value>
            <value>
                <fullName>CK-Nsf (Insufficient funds in bank)</fullName>
            </value>
            <value>
                <fullName>CK-Payment Reversal (The payment was reversed)</fullName>
            </value>
            <value>
                <fullName>CK-Reflections Payment (Move Payment to Reflections)</fullName>
            </value>
            <value>
                <fullName>CK-Resubmit Check (Resubmitting the check)</fullName>
            </value>
            <value>
                <fullName>CK-Stop Payment (Stop Payment)</fullName>
            </value>
            <value>
                <fullName>CK-Uncollectable (Check uncollectable)</fullName>
            </value>
            <value>
                <fullName>CK-Wrong Amount (The wrong amount was entered)</fullName>
            </value>
            <value>
                <fullName>CK-Wrong Bank (The wrong bank was entered)</fullName>
            </value>
            <value>
                <fullName>CK-Wrong Customer (The wrong customer was entered)</fullName>
            </value>
            <value>
                <fullName>Credit Card Failed - Payment Reversal (Credit Card Failed - Payment Reversal)</fullName>
            </value>
            <value>
                <fullName>Credit Card Refund Failed (Credit Card Refund Failed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>