unpackaged/main/default/objects/Receipt_Reversals__c/fields/Receipt_Reversal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reversal_Amount__c</fullName>
    <label>Receipt Reversal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>