unpackaged/main/default/objects/Receipt_Reversals__c/fields/Total_Receipt_Reversal_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Receipt_Reversal_Currency__c</fullName>
    <formula>CSI_ICS__r.Receipt_Reversal_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Receipt Reversal Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>