unpackaged/main/default/objects/Receipt_Reversals__c/validationRules/ICS_RR_Cannot_be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_RR_Cannot_be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR
(ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;Case Approved&#39;), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;Requestor Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;LOB Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;F&amp;R Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;AR1 Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;AR2 Submitted&#39; ) 
),
OR(ISCHANGED( Receipt_Reversal_Amount__c ), 
ISCHANGED( Receipt_Number__c ), 
ISCHANGED( Payment_Method__c ), 
ISCHANGED( Order_Status__c ), 
ISCHANGED( Reversal_Category__c ), 
ISCHANGED( Justification_for_Receipt_Rvsl_Request__c ), 
ISCHANGED( Application__c ), 
ISCHANGED( Sales_Order__c )
))</errorConditionFormula>
    <errorMessage>Case is Already Submitted for Approval. 
You don&#39;t have access to Modify.</errorMessage>
</ValidationRule>